update vido 26 RequestBody

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=JAVA-SPRING-JOBHUNTER
 #config database
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/jobhunter
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/jobhunter
 spring.datasource.username=root
 spring.datasource.password=lephuduy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
