update upload file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ lephuduy.jwt.refresh-token-validity-in-seconds=8640000
 
 #config pagination
 spring.data.web.pageable.one-indexed-parameters=true
+
+#config upload file
+spring.servlet.multipart.max-file-size = 50MB
+
+spring.servlet.multipart.max-request-size = 50MB
+
+#base path
+lephuduy.upload-file.base-uri=file:///D:/javabe/restfulAPI/upload/
