--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,12 @@ spring.servlet.multipart.max-request-size = 50MB
 
 #base path
 lephuduy.upload-file.base-uri=file:///D:/javabe/restfulAPI/upload/
+
+
+#config email with gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=duylephu204@gmail.com
+spring.mail.password=dppqabkbwqhnxwji
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
